--- a/style.css
+++ b/style.css
@@ -1,5 +1,31 @@
-img{
- width: 600px;
- height: 400px;
- length: 300px;
+img {
+  width: 600px;
+  height: 600px;
+  length: 600px;
+}
+
+body {
+  background-color: black;
+  color: whitesmoke;
+  font-size: 20px;
+}
+
+h1 {
+  font-size: 70px;
+  color: blueviolet;
+}
+
+table {
+  width: 100px;
+  text: pink;
+}
+
+th {
+  text-align: left;
+}
+
+table,
+th,
+td {
+  border: 1px solid white;
 }
